--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.0.0",
     "@grapecity/activereports-angular": "^3.2.0",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
